--- a/01 - JavaScript Drum Kit/index-start.html
+++ b/01 - JavaScript Drum Kit/index-start.html
@@ -58,8 +58,24 @@
         <audio data-key="76" src="sounds/tink.wav"></audio>
 
     <script>
+        function removeTransition(e) {
+            if (e.propertyName !== 'transform') return;
+            e.target.classlist.remove('playing');
+        }
 
+        function playSound(e) {
+            const audio = document.querySelector('audio[data-key="${e.keycode}"]');
+            const key = document.querySelector('div[data-key="${e.keycode}"]');
+            if (!audio) return;
+
+            key.classList.add('playing');
+            audio.currentTime = 0;
+            audio.play();
+        }
+        const key = Array.from(document.querySelectorAll('.key'));
+        keys.forEach(key => key.addEventListener('transitioned', removeTransition));
+        window.addEventListener('keydown', playSound);
     </script>
-    
+
     </body>
 </html>
