--- a/02 - JS and CSS Clock/index.html
+++ b/02 - JS and CSS Clock/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Varma KOllu">
+    <meta name="author" content="Varma Kollu">
     <title>JS + CSS Clock</title>
     <link rel="stylesheet" href="style.css">
   </head>
