--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -33,9 +33,29 @@
       const fifteens = investors.filter(inventor => (inventor.year >= 1500 && inventor.year <= 1600));
       console.table(fifteens);
 
-      // arrow functions 
-      // const fifteens = inventors.filter(invemtor => )
-      
+    // arrow function
+    // const fifteens = inventors.filter(invemtor => {
+    // if (investor.year >= 1500 && inventor.year <= 1600) {
+    //      return true;
+    //  }      
+    // });
+
+    // const fifteens = inventors.filter(function(inventor) {
+    //   if(inventor.year >= 1500 && inventor.year < 1600 ) {
+    //     return true; // keep it
+    //   }
+    // });
+    // console.log(fifteens);
+
+    // Array.prototype.map()
+    // 2. Give us an array of the investor's first and last names
+    const fullnames = investors.map(inventor => '${inventor.fist} ${inventor.last}');
+    // const fullNames = inventors.map(inventor => inventor.first + ' ' + inventor.last);
+    // const fullNames = inventors.map(function(inventor) {
+    //   return inventor.first + ' ' + inventor.last;
+    // });
+    console.log(fullnames);
+
 
     </script>
     
