--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -9,7 +9,7 @@
     <p><em>Hey Look at the Javascript Console</em></p>
     <script>
 
-        const investors = [
+        const inventors = [
         { first: 'Albert', last: 'Einstein', year: 1879, passed: 1955 },
         { first: 'Isaac', last: 'Newton', year: 1643, passed: 1727 },
         { first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642 },
@@ -27,10 +27,10 @@
       const people = ['Beck, Glen', 'Becker, Clen', 'Beckett, Samuel', 'Beddoes, Mick', Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
 
       // Array.prototype.filter()
-      // 1. Filter the list off investors for those who were born in the 1500's  
+      // 1. Filter the list off inventors for those who were born in the 1500's  
 
       // more shortly
-      const fifteens = investors.filter(inventor => (inventor.year >= 1500 && inventor.year <= 1600));
+      const fifteens = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year <= 1600));
       console.table(fifteens);
 
     // arrow function
@@ -49,7 +49,7 @@
 
     // Array.prototype.map()
     // 2. Give us an array of the investor's first and last names
-    const fullnames = investors.map(inventor => '${inventor.fist} ${inventor.last}');
+    const fullnames = inventors.map(inventor => '${inventor.fist} ${inventor.last}');
     // const fullNames = inventors.map(inventor => inventor.first + ' ' + inventor.last);
     // const fullNames = inventors.map(function(inventor) {
     //   return inventor.first + ' ' + inventor.last;
@@ -58,9 +58,9 @@
 
     // Array.prototype.sort()
     // 3. Sot the inventors by birthdate, oldest to youngest
-    const ordered = investors.sort((a, b) => (a.year > b.year ? 1: -1));
-    // const ordered = investors.sort((a, b) => a.year > b.year); // in this case can use only '-' to sort ascending order
-    // const ordered = investors.sort(function(a, b) {
+    const ordered = inventors.sort((a, b) => (a.year > b.year ? 1: -1));
+    // const ordered = inventors.sort((a, b) => a.year > b.year); // in this case can use only '-' to sort ascending order
+    // const ordered = inventors.sort(function(a, b) {
     //    if (a.year > b.year) {
     //        return 1;
     //    } else {
@@ -70,13 +70,25 @@
     console.table(ordered);
 
     // Array.prototype.reduce()
-    // 4. How many years did all the investors live ?
-    const totalYears = investors.reduce(total, inventor) => {
+    // 4. How many years did all the inventors live ?
+    const totalYears = inventors.reduce((total, inventor) => {
         return total += inventor.passed - inventor.year
     }, 0);
     console.log(totalYears);
 
+    // 5. Sort the inventors by years lived
+    const oldest = inventors.sort((a, b) => {
+        const lastGuy = a.passed - a.year;
+        const nextGuy = b.passed - b.year;
+
+        return lastGuy > nextGuy ? - 1 : 1;
+    });
+
+    console.table(oldest);
+
     
+
+
 
 
 
