--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -86,6 +86,19 @@
 
     console.table(oldest);
 
+    // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
+    // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    const links = Array.from(document.querySelectorAll('.mw-category a'));
+    // use ES6 new array syntax => const links = [...(document.querySelectorAll('.mw-category a'))];
+    // const category  = document.querySelector('mw-category');
+    // const links = Array.from(document.querySelectorAll('a'));
+    // console.log(links);
+     const de = links
+            .map(link => link.textContent) // extracting out only string
+            .filter(streetName => streetName.includes('de'));
+
+    console.log(de);
+
     
 
 
