--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -99,7 +99,22 @@
 
     console.log(de);
 
+    // 7. sort Exercise
+    // sort the people alphabetically by last name 
+    const alpha = people.sort((lastOne, nextOne) => {
+        const [aLast, aFirst] = lastOne.split(', ');
+        const [bLast, bFirst] = nextOne.split(', ');
+
+        return aLast > bLast ? 1 : -1;
+
+    });
+
+    console.log(alpha);
+
     
+
+
+
 
 
 
