--- a/05 - Flex Panels Image Gallery/index.html
+++ b/05 - Flex Panels Image Gallery/index.html
@@ -25,6 +25,11 @@
             <p>Today</p>
         </div>
         <div class="panel panel4">
+            <p>Give</p>
+            <p>All</p>
+            <p>You can</p>
+          </div>
+        <div class="panel panel5">
             <p>Life</p>
             <p>in</p>
             <p>Motion</p>
