--- a/06 - Ajax Type Ahead/index.html
+++ b/06 - Ajax Type Ahead/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Varma Kollu">
-    <title>Ajax Type Ahead</title>
+    <title>Type Ahead 👀</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
