--- a/09 - Dev Tools Domination/index.html
+++ b/09 - Dev Tools Domination/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Varma Kollu">
-    <title>Document</title>
+    <title>Console Tricks!</title>
 </head>
 <body>
     <p onClick="makeGreen()">×BREAK×DOWN×</p>
