--- a/09 - Dev Tools Domination/index.html
+++ b/09 - Dev Tools Domination/index.html
@@ -99,7 +99,7 @@
         // counting
         console.log("[== console.count() to counting things ==]");
         console.log("-- counts only contents inside of console.count() --");
-        console.count("chcolate");
+        console.count("chocolate");
         console.count("candy");
         console.count("chocolate");
         console.count("candy");
