--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
       </div>
       <div class="item">
         <a href="/02 - JS and CSS Clock/index.html" rel="nofollow" target="_blank">
-          <img src="/02 - JS and CSS Clock/images/" alt="JS + CSS Clock">
+          <img src="/02 - JS and CSS Clock/images/clock.png" alt="JS + CSS Clock">
           <h3>02. JS + CSS Clock</h3>
         </a>
       </div>
       <div class="item">
-        <a href="03-CSS Variables and JS/index.html" rel="nofollow" target="_blank">
-          <img src="03-CSS Variables and JS/images/03_00.png" alt="CSS Variables and JS">
+        <a href="/03 - CSS Variables & JS/index.html Variables and JS/index.html" rel="nofollow" target="_blank">
+          <img src="/03 - CSS Variables & JS/images/image.jpg Variables and JS/images/03_00.png" alt="CSS Variables and JS">
           <h3>03. CSS Variables and JS</h3>
         </a>
       </div>
       <div class="item">
-        <a href="04-Array cardio day 1/index.html" rel="nofollow" target="_blank">
-          <img src="04-Array cardio day 1/images/04_00.png" alt="Array cardio day 1">
+        <a href="/04 - Array Cardio Day 1/index.html cardio day 1/index.html" rel="nofollow" target="_blank">
+          <img src="/04 - Array Cardio Day 1/images/image.png" alt="Array cardio day 1">
           <h3>04. Array cardio day 1</h3>
         </a>
       </div>
@@ -182,14 +182,14 @@
         </a>
       </div>
       <div class="item">
-        <a href="29-Countdown Timer/index.html" rel="nofollow" target="_blank">
-          <img src="29-Countdown Timer/images/29_00.png" alt="Countdown Timer">
+        <a href="/29-Countdown Timer/index.html" rel="nofollow" target="_blank">
+          <img src="/29-Countdown Timer/images/0.png" alt="Countdown Timer">
           <h3>29. Countdown Timer</h3>
         </a>
       </div>
       <div class="item">
-        <a href="30-Whack A Mole/index.html" rel="nofollow" target="_blank">
-          <img src="30-Whack A Mole/images/30_00.png" alt="Whack A Mole">
+        <a href="/30-Whack A Mole/index.html" rel="nofollow" target="_blank">
+          <img src="/30-Whack A Mole/images/0.png" alt="Whack A Mole">
           <h3>30. Whack A Mole</h3>
         </a>
       </div>
