--- a/index.html
+++ b/index.html
@@ -26,110 +26,110 @@
         </a>
       </div>
       <div class="item">
-        <a href="/03 - CSS Variables & JS/index.html Variables and JS/index.html" rel="nofollow" target="_blank">
-          <img src="/03 - CSS Variables & JS/images/image.jpg Variables and JS/images/03_00.png" alt="CSS Variables and JS">
+        <a href="/03 - CSS Variables & JS/index.html" rel="nofollow" target="_blank">
+          <img src="/03 - CSS Variables & JS/images/image.jpg" alt="CSS Variables and JS">
           <h3>03. CSS Variables and JS</h3>
         </a>
       </div>
       <div class="item">
-        <a href="/04 - Array Cardio Day 1/index.html cardio day 1/index.html" rel="nofollow" target="_blank">
+        <a href="/04 - Array Cardio Day 1/index.html" rel="nofollow" target="_blank">
           <img src="/04 - Array Cardio Day 1/images/image.png" alt="Array cardio day 1">
           <h3>04. Array cardio day 1</h3>
         </a>
       </div>
       <div class="item">
-        <a href="05-Flex Panels Image Gallery/index.html" rel="nofollow" target="_blank">
-          <img src="05-Flex Panels Image Gallery/images/05_00.png" alt="Flex Panels Image Gallery">
+        <a href="/05 - Flex Panels Image Gallery/index.html" rel="nofollow" target="_blank">
+          <img src="/05 - Flex Panels Image Gallery/images/image.png" alt="Flex Panels Image Gallery">
           <h3>05. Flex Panels Image Gallery</h3>
         </a>
       </div>
       <div class="item">
-        <a href="06-Ajax Type Ahead/index.html" rel="nofollow" target="_blank">
-          <img src="06-Ajax Type Ahead/images/06_00.png" alt="Ajax Type Ahead">
+        <a href="/06 - Ajax Type Ahead/index.html" rel="nofollow" target="_blank">
+          <img src="/06 - Ajax Type Ahead/images/image.png" alt="Ajax Type Ahead">
           <h3>06. Ajax Type Ahead</h3>
         </a>
       </div>
       <div class="item">
-        <a href="07-Array cardio day 2/index.html" rel="nofollow" target="_blank">
-          <img src="07-Array cardio day 2/images/07_00.png" alt="Array cardio day 2">
+        <a href="/07 - Array Cardio Day 2/index.html" rel="nofollow" target="_blank">
+          <img src="/07 - Array Cardio Day 2/images/image.png" alt="Array cardio day 2">
           <h3>07-Array cardio day 2</h3>
         </a>
       </div>
       <div class="item">
-        <a href="08-Fun with HTML5 Canvas/index.html" rel="nofollow" target="_blank">
-          <img src="08-Fun with HTML5 Canvas/images/08_00.png" alt="Fun with HTML5 Canvas">
+        <a href="/08 - Fun with HTML5 Canvas/index.html" rel="nofollow" target="_blank">
+          <img src="/08 - Fun with HTML5 Canvas/images/image.png" alt="Fun with HTML5 Canvas">
           <h3>08. Fun with HTML5 Canvas</h3>
         </a>
       </div>
       <div class="item">
-        <a href="09-Dev Tools Domination/index.html" rel="nofollow" target="_blank">
-          <img src="09-Dev Tools Domination/images/09_00.png" alt="Dev Tools Domination">
+        <a href="/09 - Dev Tools Domination/index.html" rel="nofollow" target="_blank">
+          <img src="/09 - Dev Tools Domination/images/1.png" alt="Dev Tools Domination">
           <h3>09. Dev Tools Domination</h3>
         </a>
       </div>
       <div class="item">
-        <a href="10-Hold Shift and Check Checkboxes/index.html" rel="nofollow" target="_blank">
-          <img src="10-Hold Shift and Check Checkboxes/images/10_00.png" alt="Hold Shift and Check Checkboxes">
+        <a href="/10 - Hold Shift and Check Checkboxes/index.html" rel="nofollow" target="_blank">
+          <img src="/10 - Hold Shift and Check Checkboxes/images/image.png" alt="Hold Shift and Check Checkboxes">
           <h3>10. Hold Shift and Check Checkboxes</h3>
         </a>
       </div>
       <div class="item">
-        <a href="11-Custom Video Player/index.html" rel="nofollow" target="_blank">
-          <img src="11-Custom Video Player/images/11_00.png" alt="Custom Video Player">
+        <a href="/11 - Custom Video Player/index.html" rel="nofollow" target="_blank">
+          <img src="/11 - Custom Video Player/images/0.png" alt="Custom Video Player">
           <h3>11. Custom Video Player</h3>
         </a>
       </div>
       <div class="item">
-        <a href="12-Key Sequence Detection/index.html" rel="nofollow" target="_blank">
-          <img src="12-Key Sequence Detection/images/12_00.png" alt="Key Sequence Detection">
+        <a href="/12 - Key Sequence Detection/index.html" rel="nofollow" target="_blank">
+          <img src="/12 - Key Sequence Detection/images/0.png" alt="Key Sequence Detection">
           <h3>12. Key Sequence Detection</h3>
         </a>
       </div>
       <div class="item">
-        <a href="13-Slide in on Scroll/index.html" rel="nofollow" target="_blank">
-          <img src="13-Slide in on Scroll/images/13_00.png" alt="Slide in on Scroll">
+        <a href="/13-Slide in on Scroll/index.html" rel="nofollow" target="_blank">
+          <img src="/13-Slide in on Scroll/images/0.png" alt="Slide in on Scroll">
           <h3>13. Slide in on Scroll</h3>
         </a>
       </div>
       <div class="item">
-        <a href="14-JavaScript References VS Copying/index.html" rel="nofollow" target="_blank">
-          <img src="14-JavaScript References VS Copying/images/14_00.png" alt="JavaScript References VS Copying">
+        <a href="/14-JavaScript References VS Copying/index.html" rel="nofollow" target="_blank">
+          <img src="/14-JavaScript References VS Copying/images/0.png" alt="JavaScript References VS Copying">
           <h3>14. JavaScript References VS Copying</h3>
         </a>
       </div>
       <div class="item">
-        <a href="15-LocalStorage and Event Delegation/index.html" rel="nofollow" target="_blank">
-          <img src="15-LocalStorage and Event Delegation/images/15_00.png" alt="LocalStorage and Event Delegation">
+        <a href="/15-LocalStorage and Event Delegation/index.html" rel="nofollow" target="_blank">
+          <img src="/15-LocalStorage and Event Delegation/images/0.png" alt="LocalStorage and Event Delegation">
           <h3>15. LocalStorage and Event Delegation</h3>
         </a>
       </div>
       <div class="item">
-        <a href="16-Mouse Move Shadow/index.html" rel="nofollow" target="_blank">
-          <img src="16-Mouse Move Shadow/images/16_00.png" alt="Mouse Move Shadow">
+        <a href="/16-Mouse Move Shadow/index.html" rel="nofollow" target="_blank">
+          <img src="/16-Mouse Move Shadow/images/0.png" alt="Mouse Move Shadow">
           <h3>16. Mouse Move Shadow</h3>
         </a>
       </div>
       <div class="item">
-        <a href="17-Sort Without Articles/index.html" rel="nofollow" target="_blank">
-          <img src="17-Sort Without Articles/images/17_00.png" alt="Sort Without Articles">
+        <a href="/17-Sort Without Articles/index.html" rel="nofollow" target="_blank">
+          <img src="/17-Sort Without Articles/images/0.png" alt="Sort Without Articles">
           <h3>17. Sort Without Articles</h3>
         </a>
       </div>
       <div class="item">
-        <a href="18-Adding Up Times with Reduce/index.html" rel="nofollow target="_blank">
-          <img src="18-Adding Up Times with Reduce/images/18_00.png" alt="Adding Up Times with Reduce">
+        <a href="/18-Adding Up Times with Reduce/index.html" rel="nofollow target="_blank">
+          <img src="/18-Adding Up Times with Reduce/images/0.png" alt="Adding Up Times with Reduce">
           <h3>18. Adding Up Times with Reduce</h3>
         </a>
       </div>
       <div class="item">
-        <a href="19-Webcam Fun/index.html" rel="nofollow" target="_blank">
-          <img src="19-Webcam Fun/images/19_00.png" alt="Webcam Fun">
+        <a href="/19-Webcam Fun/index.html" rel="nofollow" target="_blank">
+          <img src="/19-Webcam Fun/images/0.png" alt="Webcam Fun">
           <h3>19. Webcam Fun</h3>
         </a>
       </div>
       <div class="item">
-        <a href="20-Speech Detection/index.html" rel="nofollow" target="_blank">
-          <img src="20-Speech Detection/images/20_00.png" alt="Speech Detection">
+        <a href="/20-Speech Detection/index.html" rel="nofollow" target="_blank">
+          <img src="/20-Speech Detection/images/0.png" alt="Speech Detection">
           <h3>20. Speech Detection</h3>
         </a>
       </div>
@@ -140,44 +140,44 @@
         </a>
       </div>
       <div class="item">
-        <a href="22-Follow Along Link Highlighter/index.html" rel="nofollow" target="_blank">
-          <img src="22-Follow Along Link Highlighter/images/22_00.png" alt="Follow Along Link Highlighter">
+        <a href="/22-Follow Along Link Highlighter/index.html" rel="nofollow" target="_blank">
+          <img src="/22-Follow Along Link Highlighter/images/0.png" alt="Follow Along Link Highlighter">
           <h3>22. Follow Along Link Highlighter</h3>
         </a>
       </div>
       <div class="item">
-        <a href="23-Speech Synthesis/index.html" rel="nofollow" target="_blank">
-          <img src="23-Speech Synthesis/images/23_00.png" alt="Speech Synthesis">
+        <a href="/23-Speech Synthesis/index.html" rel="nofollow" target="_blank">
+          <img src="/23-Speech Synthesis/images/0.png" alt="Speech Synthesis">
           <h3>23. Speech Synthesis</h3>
         </a>
       </div>
       <div class="item">
-        <a href="24-Sticky Nav/index.html" rel="nofollow" target="_blank">
-          <img src="24-Sticky Nav/images/24_00.png" alt="Sticky Nav">
+        <a href="/24-Sticky Nav/index.html" rel="nofollow" target="_blank">
+          <img src="/24-Sticky Nav/images/0.png" alt="Sticky Nav">
           <h3>24. Sticky Nav</h3>
         </a>
       </div>
       <div class="item">
-        <a href="25-Event Capture, Propagation, Bubbling and Once/index.html" rel="nofollow" target="_blank">
-          <img src="25-Event Capture, Propagation, Bubbling and Once/images/25_00.png" alt="Event Capture, Propagation, Bubbling and Once">
+        <a href="/25-Event Capture, Propagation, Bubbling and Once/index.html" rel="nofollow" target="_blank">
+          <img src="/25-Event Capture, Propagation, Bubbling and Once/images/0.png" alt="Event Capture, Propagation, Bubbling and Once">
           <h3>25. Event Capture, Propagation, Bubbling and Once</h3>
         </a>
       </div>
       <div class="item">
-        <a href="26-Stripe Follow Along Nav/index.html" rel="nofollow" target="_blank" >
-          <img src="26-Stripe Follow Along Nav/images/26_00.png" alt="Stripe Follow Along Nav">
+        <a href="/26-Stripe Follow Along Nav/index.html" rel="nofollow" target="_blank" >
+          <img src="/26-Stripe Follow Along Nav/images/0.png" alt="Stripe Follow Along Nav">
           <h3>26. Stripe Follow Along Nav</h3>
         </a>
       </div>
       <div class="item">
-        <a href="27-Click and Drag/index.html" rel="nofollow" target="_blank">
-          <img src="27-Click and Drag/images/27_00.png" alt="Click and Drag">
+        <a href="/27-Click and Drag/index.html" rel="nofollow" target="_blank">
+          <img src="/27-Click and Drag/images/0.png" alt="Click and Drag">
           <h3>27. Click and Drag</h3>
         </a>
       </div>
       <div class="item">
-        <a href="28-Video Speed Controller/index.html" rel="nofollow" target="_blank">
-          <img src="28-Video Speed Controller/images/28_00.png" alt="Video Speed Controller">
+        <a href="/28-Video Speed Controller/index.html" rel="nofollow" target="_blank">
+          <img src="/28-Video Speed Controller/images/0.png" alt="Video Speed Controller">
           <h3>28. Video Speed Controller</h3>
         </a>
       </div>
