--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <div class="items">
       <div class="item">
-        <a href="/01 - JavaScript Drum Kit/index.html" rel="nofollow" target="_blank">
+        <a href="01 - JavaScript Drum Kit/index.html" rel="nofollow" target="_blank">
           <img src="/01 - JavaScript Drum Kit/images/background.png" alt="JS Drum Kit">
           <h3>01. JS Drum Kit</h3>
         </a>
