--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Varma Kollu">
     <title>JavaScript30 by Varma Kollu</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="JavaScript30/main.css">
   </head>
   <body>
     <header>
