--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Varma Kollu">
     <title>JavaScript30 by Varma Kollu</title>
-    <link rel="stylesheet" href="JavaScript30/main.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <header>
@@ -14,7 +14,7 @@
     </header>
     <div class="items">
       <div class="item">
-        <a href="JavaScript30/01 - JavaScript Drum Kit/index.html" rel="nofollow" target="_blank">
+        <a href="01 - JavaScript Drum Kit/index.html" rel="nofollow" target="_blank">
           <img src="/01 - JavaScript Drum Kit/images/background.png" alt="JS Drum Kit">
           <h3>01. JS Drum Kit</h3>
         </a>
