--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
       <div class="item">
         <a href="14 - JavaScript References VS Copying/index.html" rel="nofollow" target="_blank">
-          <img src="14 - JavaScript References VS Copying/images/00.png" alt="JavaScript References VS Copying">
+          <img src="14 - JavaScript References VS Copying/images/00.png alt="JavaScript References VS Copying">
           <h3>14. JavaScript References VS Copying</h3>
         </a>
       </div>
