--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
       </div>
       <div class="item">
         <a href="14 - JavaScript References VS Copying/index.html" rel="nofollow" target="_blank">
-          <img src="14 - JavaScript References VS Copying/images/00.png alt="JavaScript References VS Copying">
+          <img src="14 - JavaScript References VS Copying/images/00.png" alt="JavaScript References VS Copying">
           <h3>14. JavaScript References VS Copying</h3>
         </a>
       </div>
       <div class="item">
-        <a href="15-LocalStorage and Event Delegation/index.html" rel="nofollow" target="_blank">
-          <img src="15-LocalStorage and Event Delegation/images/0.png" alt="LocalStorage and Event Delegation">
+        <a href="15 - LocalStorage and Event Delegation/index.html" rel="nofollow" target="_blank">
+          <img src="15 - LocalStorage and Event Delegation/images/00.png" alt="LocalStorage and Event Delegation">
           <h3>15. LocalStorage and Event Delegation</h3>
         </a>
       </div>
