--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         </a>
       </div>
       <div class="item">
-        <a href="16-Mouse Move Shadow/index.html" rel="nofollow" target="_blank">
-          <img src="16-Mouse Move Shadow/images/0.png" alt="Mouse Move Shadow">
+        <a href="16 - Mouse Move Shadow/index.html" rel="nofollow" target="_blank">
+          <img src="16 - Mouse Move Shadow/images/space.png" alt="Mouse Move Shadow">
           <h3>16. Mouse Move Shadow</h3>
         </a>
       </div>
