--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         </a>
       </div>
       <div class="item">
-        <a href="20-Speech Detection/index.html" rel="nofollow" target="_blank">
-          <img src="20-Speech Detection/images/0.png" alt="Speech Detection">
+        <a href="20 - Speech Detection/index.html" rel="nofollow" target="_blank">
+          <img src="20 - Speech Detection/images/00.png"Speech Detection">
           <h3>20. Speech Detection</h3>
         </a>
       </div>
