--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         </a>
       </div>
       <div class="item">
-        <a href="21-Geolocation/index.html" rel="nofollow" target="_blank">
-          <img src="21-Geolocation/images/21_00.png" alt="21-Geolocation">
+        <a href="21 - Geolocation/index.html" rel="nofollow" target="_blank">
+          <img src="21 - Geolocation/images/00.png" alt="21-Geolocation">
           <h3>21. Geolocation</h3>
         </a>
       </div>
