--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
         </a>
       </div>
       <div class="item">
-        <a href="22-Follow Along Link Highlighter/index.html" rel="nofollow" target="_blank">
-          <img src="22-Follow Along Link Highlighter/images/0.png" alt="Follow Along Link Highlighter">
+        <a href="22 - Follow Along Link Highlighter/index.html" rel="nofollow" target="_blank">
+          <img src="22 - Follow Along Link Highlighter/images/00.png"Follow Along Link Highlighter">
           <h3>22. Follow Along Link Highlighter</h3>
         </a>
       </div>
