--- a/26 - Stripe Follow Along Nav/index.html
+++ b/26 - Stripe Follow Along Nav/index.html
@@ -43,9 +43,9 @@
             <li>
                 <a href="#">Contact me</a>
                 <ul class="dropdown dropdown3">
-                  <li><a class="button" href="http://twitter.com/amelieyeh">Twiter</a></li>
-                  <li><a class="button" href="http://facebook.com/amelieyeh">Facebook</a></li>
-                  <li><a class="button" href="https://github.com/amelieyeh">Github</a></li>
+                  <li><a class="button" href="http://twitter.com/itsvarmak">Twiter</a></li>
+                  <li><a class="button" href="http://instagram.com/itsvarmak">Instagram</a></li>
+                  <li><a class="button" href="https://github.com/varmakollu">Github</a></li>
                 </ul>
             </li>
         </ul>
