--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
         </a>
       </div>
       <div class="item">
-        <a href="28-Video Speed Controller/index.html" rel="nofollow" target="_blank">
-          <img src="28-Video Speed Controller/images/0.png" alt="Video Speed Controller">
+        <a href="28 - Video Speed Controller/index.html" rel="nofollow" target="_blank">
+          <img src="28 - Video Speed Controller/images/0.png"Video Speed Controller">
           <h3>28. Video Speed Controller</h3>
         </a>
       </div>
